force-app/main/default/objects/StudentGame__c/StudentGame__c.object-meta.xml
<CustomObject>
    <label>StudentGame</label>
    <nameField>
        <label>StudentGame Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentGames</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>