force-app/main/default/objects/StudentGame__c/fields/Fees_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fees_Balance__c</fullName>
    <label>Fees Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>