force-app/main/default/objects/StudentGame__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <label>Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>