force-app/main/default/objects/StudentGame__c/fields/StudentClassEnrollment__c.field-meta.xml
<CustomField>
    <fullName>StudentClassEnrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StudentClassEnrollment</label>
    <referenceTo>Class_Student__c</referenceTo>
    <relationshipLabel>StudentGames</relationshipLabel>
    <relationshipName>StudentGames</relationshipName>
    <type>Lookup</type>
</CustomField>