force-app/main/default/objects/StudentGame__c/fields/TournamentSport__c.field-meta.xml
<CustomField>
    <fullName>TournamentSport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TournamentSport</label>
    <referenceTo>TournamentSport__c</referenceTo>
    <relationshipLabel>StudentGames</relationshipLabel>
    <relationshipName>StudentGames</relationshipName>
    <type>Lookup</type>
</CustomField>